Fix horizontal scroll for categories bar

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -136,6 +136,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid var(--dark-brown);
+    z-index: 1010;
 }
 
 @media screen and (max-width: 1150px) {
