--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -73,6 +73,7 @@
 
 .category-inner {
     padding: 0 55px;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: flex-start;
@@ -85,6 +86,10 @@
 
 .category-item {
     margin-right: 35px;
+}
+
+.category-item:hover {
+    color: var(--dark-brown)
 }
 
 .button-scroll-left, .button-scroll-right {
