--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,95 +1,100 @@
 .navbar {
-    width: 746px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 746px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .group-items {
-    display: flex;
+  display: flex;
 }
 
 .group-item {
-    margin-right: 20px;
-    font-size: 20px;
+  margin-right: 20px;
+  font-size: 20px;
+}
+
+.group-item:hover {
+  color: var(--dark-brown);
 }
 
 .menu-button {
-    display: none;
-    background: transparent;
-    border: none;
-    margin-left: 20px;
+  display: none;
+  background: transparent;
+  border: none;
+  margin-left: 20px;
 }
 
 .close-navbar {
-    display: none;
+  display: none;
 }
 
 @media screen and (max-width: 1280px) {
-    .navbar {
-        width: 100%;
-        justify-content: flex-end;
-    }
-    .group-item {
-        font-size: 16px;
-    }
+  .navbar {
+    width: 100%;
+    justify-content: flex-end;
+  }
+  .group-item {
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 812px) {
-    .group-items {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .navbar {
-        display: none;
-    }
-    .menu-button {
-        display: block;
-    }
-    .active {
-        position: absolute;
-        top: 0;
-        width: 95%;
-        height: 100vh;
-        background-color: white;
-        right: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
-    
-    .active .group-items {
-        width: 100%;
-    }
-    
-    .active .group-item {
-        width: 100%;
-        height: 56px;
-        display: flex;
-        align-items: center;
-        padding: 8px 12px;
-        font-weight: bold;
-        border-bottom: 1px solid var(--dark-brown);
-        color: var(--dark-brown);
-    }
-    .close-navbar {
-        display: block;
-        position: absolute;
-        right: 0;
-        margin-right: 45%;
-        bottom: 10px;
-        width: 50px;
-        height: 50px;
-        background-color: #33333330;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
-    }
-    .group-buttons {
-        padding: 8px 12px;
-        margin-top: 12px;
-    }
+  .group-items {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar {
+    display: none;
+  }
+  .menu-button {
+    display: block;
+  }
+  .active {
+    width: 95%;
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    background-color: white;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    box-shadow: 0px 15px 15px #25242010;
+  }
+
+  .active .group-items {
+    width: 100%;
+  }
+
+  .active .group-item {
+    width: 100%;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    padding: 8px 12px;
+    font-weight: bold;
+    border-bottom: 1px solid var(--dark-brown);
+    color: var(--dark-brown);
+  }
+
+  .close-navbar {
+    position: absolute;
+    right: 0;
+    margin-right: 45%;
+    bottom: 50px;
+    width: 50px;
+    height: 50px;
+    background-color: #33333330;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+  }
+  .group-buttons {
+    padding: 8px 12px;
+    margin-top: 12px;
+  }
 }
